[package]
name = "ncube"
version = "1.2.2"
edition = "2021"
authors = ["Nuno David <email@ndavd.com>"]
license = "MIT"
description = "Generalized Hypercube Visualizer"
readme = ".github/README.md"
repository = "https://github.com/ndavd/ncube"
exclude = [".github/*.gif", ".github/workflows"]
keywords = ["simulation", "hypercube", "bevy", "mathematics", "tesseract"]
categories = ["simulation", "mathematics", "visualization", "graphics"]

[dependencies]
bevy = "0.11.0"
bevy_egui = "0.21.0"
home = "0.5.5"
serde = "1.0.188"
serde_json = "1.0.105"
