[package]
name = "ncube"
version = "1.2.3"
edition = "2021"
authors = ["Nuno David <email@ndavd.com>"]
license = "MIT"
description = "Generalized Hypercube Visualizer"
readme = ".github/README.md"
repository = "https://github.com/ndavd/ncube"
exclude = [".github/*.gif", ".github/workflows"]
keywords = ["simulation", "hypercube", "bevy", "mathematics", "tesseract"]
categories = ["simulation", "mathematics", "visualization", "graphics"]

[profile.tiny]
inherits = "release"
opt-level = "s"

[target.'cfg(not(target_family="wasm"))'.dependencies]
home = "0.5.5"
eframe = "0.23.0"
egui_file = "0.11.1"

[dependencies]
bevy = "0.12.0"
bevy_egui = "0.23.0"
serde = "1.0.188"
serde_json = "1.0.105"
wasm-bindgen = "0.2.89"
