[package]
name = "ncube"
version = "2.4.1"
edition = "2021"
authors = ["Nuno David <email@ndavd.com>"]
license = "MIT"
description = "Generalized Hypercube Visualizer"
readme = ".github/README.md"
repository = "https://github.com/ndavd/ncube"
exclude = [".github/*.gif", ".github/workflows", "web"]
keywords = ["simulation", "hypercube", "bevy", "mathematics", "tesseract"]
categories = ["simulation", "mathematics", "visualization", "graphics"]

[profile.tiny]
inherits = "release"
opt-level = "s"

[target.'cfg(not(target_family="wasm"))'.dependencies]
home = "0.5.5"
eframe = "0.23.0"
egui_file = "0.17.0"

[dependencies]
bevy = "0.13.2"
bevy_egui = { version = "0.27.0", default-features = false, features = [
  "open_url",
  "default_fonts",
  "render",
] }
serde = "1.0.188"
serde_json = "1.0.105"
wasm-bindgen = "0.2.92"
